# blogapp

./: .gitignore  IMPLEMENTATION_BLOGAPP.md  MULTITENANT_MIGRATION_GUIDE.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 30ad0a2c60b0_add_multi_tenant_support.py  3275a571cbfa_add_first_name_and_last_name_to_user_.py  328938876b29_add_deleted_at_to_user.py  35e89cf2f6d2_add_site_settings_table.py  9d0992361088_add_post_status_and_published_at.py  a1b2c3d4e5f6_add_user_is_active_field.py  b7f2c1d9e4a8_add_platform_settings_table.py  ba9a10a2f3e9_add_is_sample_column_to_post_table.py  c8d4b0a0d1e1_fix_post_author_relationship.py  c9a1f4e7b2d6_add_audit_and_moderation_tables.py  caa5f4731231_add_ondelete_cascade_to_foreign_key_in_.py  d4e8f1a2b3c4_add_blog_onboarding_fields.py  f1a2b3c4d5e6_add_email_verification_and_password_reset.py
backend/app/: dbConfig.py  main.py
backend/app/core/: __init__.py  audit.py  audit_middleware.py  config.py  db.py  email.py  email_templates.py  moderation.py  permissions.py  scheduler.py  security.py
backend/app/models/: __init__.py  audit.py  auth_tokens.py  blog.py  comment.py  models.py  moderation.py  post.py  settings.py  user.py
backend/app/modules/: __init__.py
backend/app/routes/: admin.py  comments.py  posts.py  settings.py  tags.py  users.py
backend/app/schemas/: __init__.py  audit.py  blog.py  comments.py  posts.py  (+6 more)
backend/scripts/: create_admin.py  migrate_to_multitenant.py
backend/tests/: test_posts_endpoints.py
(+166 files in other folders)
